# caper

./: .gitignore  DETAILS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  integration.yml  pytest.yml  test.yml
caper/: __init__.py  __main__.py  arg_tool.py  backward_compatibility.py  caper_args.py  caper_backend_conf.py  caper_base.py  caper_client.py  caper_init.py  caper_labels.py  caper_runner.py  caper_wdl_parser.py  caper_workflow_opts.py  cli.py  cli_hpc.py  cromwell.py  cromwell_backend.py  cromwell_metadata.py  cromwell_rest_api.py  cromwell_workflow_monitor.py  dict_tool.py  hocon_string.py  hpc.py  nb_subproc_thread.py  resource_analysis.py  server_heartbeat.py  singularity.py  wdl_parser.py
caper/cli/: __init__.py  arg_field.py  commands.py  config.py  dispatch.py  handlers.py  parsers.py
caper/cli/args/: __init__.py  analysis.py  base.py  client.py  hpc.py  init.py  mixins.py  run.py  server.py  submit.py
docs/: cli_refactor.md  conf_encode_workshop_2019.md  conf_gcp.md  resource_param.md
scripts/aws_caper_server/: README.md
scripts/gcp_caper_server/: README.md  create_instance.sh
tests/: conftest.py  example_wdl.py  test_arg_tool.py  test_caper_labels.py  test_caper_wdl_parser.py  test_caper_workflow_opts.py  test_cli_run.py  test_cli_server_client_gcp.py  test_cromwell.py  test_cromwell_backend.py  test_cromwell_metadata.py  test_cromwell_rest_api.py  test_dict_tool.py  test_hocon_string.py  test_nb_subproc_thread.py  test_resource_analysis.py  test_server_heartbeat.py  test_singularity.py  test_wdl_parser.py
