[project]
name = "caper"
dynamic = ["version"]
description = "Cromwell Assisted Pipeline ExecutoR"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jin Lee", email = "leepc12@gmail.com" }
]
keywords = ["cromwell", "pipeline", "workflow", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyhocon>=0.3.53",
    "requests>=2.20",
    "pyopenssl",
    "autouri>=0.4.4",
    "miniwdl>=0.7.0",
    "humanfriendly",
    "numpy>=1.8.2",
    "pandas>=1.0",
    "scikit-learn>=0.19.2",
    "matplotlib>=1.5",
    "six>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/MoTrPAC/caper"
Repository = "https://github.com/MoTrPAC/caper"

[project.scripts]
caper = "caper.__main__:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["caper"]

[tool.setuptools.package-data]
caper = ["bin/*", "scripts/gcp_caper_server/*"]

[tool.setuptools.dynamic]
version = { attr = "caper.__version__" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
